--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,8 @@ environment:
     - PYTHON: "C:\\Python36-x64"
 
 install:
-  - "%PYTHON%\\python.exe -m pip install ."
+ - "%PYTHON%\\python.exe -m pip install --upgrade pip"
+ - "%PYTHON%\\python.exe -m pip install ."
 
 build: off
 
